--- a/osgi/source/org.datanucleus.store.types.awtgeom.source/pom.xml
+++ b/osgi/source/org.datanucleus.store.types.awtgeom.source/pom.xml
@@ -6,12 +6,12 @@
 		<groupId>org.elyast.orbit.osgi</groupId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>org.datanucleus.store.mongodb.source</artifactId>
-	<version>3.0.6</version>
+	<artifactId>org.datanucleus.store.types.awtgeom.source</artifactId>
+	<version>3.0.0.release</version>
 	<properties>
-		<wrapped.version>3.0.6</wrapped.version>
-		<wrapped.artifactId>datanucleus-mongodb</wrapped.artifactId>
-		<bundle.symbolicName>org.datanucleus.store.mongodb</bundle.symbolicName>
+		<wrapped.version>3.0.0-release</wrapped.version>
+		<wrapped.artifactId>datanucleus-awtgeom</wrapped.artifactId>
+		<bundle.symbolicName>org.datanucleus.store.types.awtgeom</bundle.symbolicName>
 		<wrapped.groupId>org.datanucleus</wrapped.groupId>
 	</properties>
 </project>
