--- a/osgi/source/org.datanucleus.store.types.jodatime.source/pom.xml
+++ b/osgi/source/org.datanucleus.store.types.jodatime.source/pom.xml
@@ -7,9 +7,9 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.datanucleus.store.types.jodatime.source</artifactId>
-	<version>3.1.0.m1</version>
+	<version>3.0.1</version>
 	<properties>
-		<wrapped.version>3.1.0-m1</wrapped.version>
+		<wrapped.version>3.0.1</wrapped.version>
 		<wrapped.artifactId>datanucleus-jodatime</wrapped.artifactId>
 		<bundle.symbolicName>org.datanucleus.store.types.jodatime</bundle.symbolicName>
 		<wrapped.groupId>org.datanucleus</wrapped.groupId>
