--- a/system.tests/pom.xml
+++ b/system.tests/pom.xml
@@ -86,7 +86,12 @@
 							<type>p2-installable-unit</type>
 							<artifactId>org.datanucleus.core.feature.feature.group</artifactId>
 							<version>[1.0.0,2.0.0)</version>
-						</dependency>						
+						</dependency>		
+					<dependency>
+							<type>p2-installable-unit</type>
+							<artifactId>org.elyast.orbit.test.feature.feature.group</artifactId>
+							<version>[1.0.0,2.0.0)</version>
+						</dependency>										
 					</dependencies>
 				</configuration>
 			</plugin>
