--- a/system.tests/pom.xml
+++ b/system.tests/pom.xml
@@ -1,25 +1,69 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>org.elyast.orbit.parent</artifactId>
-		<groupId>org.elyast.orbit</groupId>
-		<version>1.0.0-SNAPSHOT</version>
-		<relativePath>../parent/pom.xml</relativePath>
-	</parent>
+	<groupId>org.elyast.orbit</groupId>
 	<artifactId>org.elyast.orbit.system.tests</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>eclipse-test-plugin</packaging>
+	<prerequisites>
+		<maven>3.0</maven>
+	</prerequisites>
+
+	<properties>
+		<tycho.version>0.14.1</tycho.version>
+		<scala.version>2.9.1</scala.version>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
 
 	<repositories>
+		<repository>
+			<id>ajdt</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/tools/ajdt/37/update</url>
+		</repository>
+		<repository>
+			<id>indigo</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/eclipse/updates/3.7</url>
+		</repository>
+		<repository>
+			<id>orbit-S20120428190502</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/tools/orbit/downloads/drops/S20120428190502/repository/</url>
+		</repository>
+		<repository>
+			<id>jetty</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/jetty/updates/jetty-rt-3.8milestones</url>
+		</repository>
+		<repository>
+			<id>scala</id>
+			<layout>p2</layout>
+			<url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-${scala.version}.final/</url>
+		</repository>
 		<repository>
 			<id>elyast-orbit</id>
 			<layout>p2</layout>
 			<url>jar:file:${user.home}/.m2/repository/org/elyast/orbit/org.elyast.orbit.repository/${project.version}/org.elyast.orbit.repository-${project.version}.zip!/</url>
-		</repository>	
+		</repository>
 	</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>datanucleus</id>
+			<name>Datanucleus</name>
+			<url>http://www.datanucleus.org/downloads/maven2</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-maven-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<extensions>true</extensions>
+			</plugin>
+
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>target-platform-configuration</artifactId>
@@ -56,26 +100,65 @@
 				</configuration>
 			</plugin>
 			<plugin>
-                <groupId>org.datanucleus</groupId>
-                <artifactId>maven-datanucleus-plugin</artifactId>
-                <version>3.0.2</version>
-                <configuration>
-                    <verbose>true</verbose>
-                </configuration>
-                <executions>
-                    <execution>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>enhance</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>			
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-source-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<executions>
+					<execution>
+						<id>plugin-source</id>
+						<goals>
+							<goal>plugin-source</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.tycho</groupId>
+				<artifactId>tycho-compiler-plugin</artifactId>
+				<version>${tycho.version}</version>
+				<configuration>
+					<encoding>UTF-8</encoding>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.7</version>
+				<executions>
+					<execution>
+						<phase>process-classes</phase>
+						<goals>
+							<goal>run</goal>
+						</goals>
+						<configuration>
+							<target>
+								<taskdef name="datanucleusenhancer" classpathref="maven.compile.classpath"
+									classname="org.datanucleus.enhancer.tools.EnhancerTask" />
+								<datanucleusenhancer
+									dir="${project.build.outputDirectory}" failonerror="true" verbose="true">
+									<fileset dir="${project.build.outputDirectory}">
+										<include name="**/*.jdo" />
+										<include name="**/*.class" />
+									</fileset>
+									<classpath>
+										<path refid="maven.compile.classpath" />
+									</classpath>
+								</datanucleusenhancer>
+							</target>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
+				<version>${tycho.version}</version>
 				<configuration>
-					<showEclipseLog>true</showEclipseLog>
+					<argLine>-Xmx1024m -Dlogback.configurationFile=${basedir}/src/main/resources/logback.xml</argLine>
+					<useUIHarness>false</useUIHarness>
+					<useUIThread>false</useUIThread>
 					<dependencies>
 						<dependency>
 							<type>p2-installable-unit</type>
@@ -86,15 +169,44 @@
 							<type>p2-installable-unit</type>
 							<artifactId>org.datanucleus.core.feature.feature.group</artifactId>
 							<version>[1.0.0,2.0.0)</version>
-						</dependency>		
-					<dependency>
-							<type>p2-installable-unit</type>
-							<artifactId>org.elyast.orbit.test.feature.feature.group</artifactId>
-							<version>[1.0.0,2.0.0)</version>
-						</dependency>										
+						</dependency>
 					</dependencies>
 				</configuration>
 			</plugin>
 		</plugins>
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>
+											org.apache.maven.plugins
+										</groupId>
+										<artifactId>
+											maven-antrun-plugin
+										</artifactId>
+										<versionRange>[1.7,)</versionRange>
+										<goals>
+											<goal>run</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 </project>
