--- a/org.lang.scala.tools.feature/pom.xml
+++ b/org.lang.scala.tools.feature/pom.xml
@@ -8,6 +8,6 @@
 		<relativePath>../parent/pom.xml</relativePath>
 	</parent>
 
-	<artifactId>org.lang.scala.tools</artifactId>
+	<artifactId>org.lang.scala.tools.feature</artifactId>
 	<packaging>eclipse-feature</packaging>
 </project>
