--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -323,6 +323,13 @@
 			<artifactId>org.apache.commons.lang.source</artifactId>
 			<version>2.5</version>
 		</dependency>
+
+		<!-- Scala feature -->
+		<dependency>
+			<groupId>org.scalatest</groupId>
+			<artifactId>scalatest_${scala.version}</artifactId>
+			<version>1.8.RC1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
