--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>p2target</module>
 		<module>parent</module>
 		<module>org.datanucleus.core.feature</module>
+		<module>org.lang.scala.tools.feature</module>
 		<module>repository</module>
 	</modules>
 
