--- a/system.tests/build.properties
+++ b/system.tests/build.properties
@@ -1,7 +1,9 @@
 source.. = src/main/java/,\
-               src/main/resources/,\
-               src/test/java/,\
-               src/test/resources/
+           src/main/resources/,\
+           src/test/java/,\
+           src/test/resources/,\
+           src/test/scala/,\
+           src/main/scala/
 output.. = target/classes
 bin.includes = META-INF/,\
                .
