unfortunately scalamock is not there yet to be working in osgi, maybe 2.3

--- a/osgi/source/pom.xml
+++ b/osgi/source/pom.xml
@@ -89,7 +89,8 @@
 		<module>org.apache.hbase.source</module>
 		<module>org.apache.commons.lang.source</module>
 		<module>org.apache.commons.digester.source</module>
-		<module>org.apache.commons.configuration.source</module>			
+		<module>org.apache.commons.configuration.source</module>
+		<module>org.scalatest.source</module>			
 	</modules>
 	
 	<repositories>
