--- a/osgi/bundle/pom.xml
+++ b/osgi/bundle/pom.xml
@@ -14,6 +14,13 @@
 		<bundle.symbolicName>org.junit</bundle.symbolicName>
 		<wrapped.groupId>junit</wrapped.groupId>
 	</properties>
+	
+	<repositories>
+		<repository>
+			<id>oss</id>
+			<url>http://oss.sonatype.org/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<plugins>
@@ -59,5 +66,6 @@
 		<module>org.apache.hbase</module>
 		<!-- <module>org.apache.ds</module> -->
 		<!-- <module>mx4j.tools</module> -->
+		<!-- module>org.scalamock</module-->
 	</modules>
 </project>
