--- a/osgi/pom.xml
+++ b/osgi/pom.xml
@@ -7,6 +7,7 @@
 	<packaging>pom</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<scala.version>2.9.1</scala.version>
 	</properties>
 	<repositories>
 	<repository>
