--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -339,7 +339,27 @@
 			<artifactId>org.scalatest.source</artifactId>
 			<version>1.8.0.RC1</version>
 		</dependency>
-				
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>scalaj</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>dispatch</artifactId>
+			<version>0.8.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.james</groupId>
+			<artifactId>apache-mime4j-core</artifactId>
+			<version>0.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.4</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<plugins>
