--- a/system.tests/pom.xml
+++ b/system.tests/pom.xml
@@ -124,31 +124,31 @@
 			</plugin>
 
 			<plugin>
-		        <groupId>net.alchim31.maven</groupId>
-		        <artifactId>scala-maven-plugin</artifactId>
-		        <version>3.0.1</version>
-		     		<executions>
-						<execution>
-							<id>scala-compile-first</id>
-							<phase>process-resources</phase>
-							<goals>
-						    	<goal>add-source</goal>
-								<goal>compile</goal>
-							</goals>
-						</execution>
-						<execution>
-							<id>scala-test-compile</id>
-							<phase>process-test-resources</phase>
-							<goals>
-								<goal>testCompile</goal>
-							</goals>
-						</execution>
-					</executions>
-		        <configuration>
-		          <scalaVersion>${scala.version}</scalaVersion>
-		          <sendJavaToScalac>false</sendJavaToScalac>
-		        </configuration>
-		      </plugin>
+				<groupId>net.alchim31.maven</groupId>
+				<artifactId>scala-maven-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>scala-compile-first</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>add-source</goal>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>scala-test-compile</id>
+						<phase>process-test-resources</phase>
+						<goals>
+							<goal>testCompile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<scalaVersion>${scala.version}</scalaVersion>
+					<sendJavaToScalac>false</sendJavaToScalac>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -164,8 +164,8 @@
 							<target>
 								<taskdef name="datanucleusenhancer" classpathref="maven.compile.classpath"
 									classname="org.datanucleus.enhancer.tools.EnhancerTask" />
-								<datanucleusenhancer
-									dir="${project.build.outputDirectory}" failonerror="true" verbose="true">
+								<datanucleusenhancer dir="${project.build.outputDirectory}"
+									failonerror="true" verbose="true">
 									<fileset dir="${project.build.outputDirectory}">
 										<include name="**/*.jdo" />
 										<include name="**/*.class" />
@@ -190,11 +190,6 @@
 					<dependencies>
 						<dependency>
 							<type>p2-installable-unit</type>
-							<artifactId>ch.qos.logback.slf4j</artifactId>
-							<version>[1.0.0,2.0.0)</version>
-						</dependency>
-						<dependency>
-							<type>p2-installable-unit</type>
 							<artifactId>org.datanucleus.core.feature.feature.group</artifactId>
 							<version>[1.0.0,2.0.0)</version>
 						</dependency>
@@ -202,7 +197,7 @@
 							<type>p2-installable-unit</type>
 							<artifactId>org.lang.scala.tools.feature.feature.group</artifactId>
 							<version>[1.0.0,2.0.0)</version>
-						</dependency>						
+						</dependency>			
 					</dependencies>
 				</configuration>
 			</plugin>
