added sources to scala tools

--- a/osgi/bundle/pom.xml
+++ b/osgi/bundle/pom.xml
@@ -66,6 +66,7 @@
 		<module>org.apache.hbase</module>
 		<module>scalaj</module>
 		<module>dispatch</module>
+		<module>scalaz</module>
 		<!-- <module>org.apache.ds</module> -->
 		<!-- <module>mx4j.tools</module> -->
 		<!-- module>org.scalamock</module-->
