--- a/osgi/source/pom.xml
+++ b/osgi/source/pom.xml
@@ -90,7 +90,11 @@
 		<module>org.apache.commons.lang.source</module>
 		<module>org.apache.commons.digester.source</module>
 		<module>org.apache.commons.configuration.source</module>
-		<module>org.scalatest.source</module>			
+		<module>org.scalatest.source</module>
+		<module>org.apache.commons.codec.source</module>
+		<module>org.apache.james.apache-mime4j-core.source</module>
+		<module>scalaz.source</module>
+		<module>dispatch.source</module>			
 	</modules>
 	
 	<repositories>
