--- a/osgi/bundle/org.apache.poi/pom.xml
+++ b/osgi/bundle/org.apache.poi/pom.xml
@@ -7,12 +7,12 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.poi</artifactId>
-	<version>3.6.0</version>
+	<version>3.7.0</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
 	<properties>
-		<wrapped.version>3.6</wrapped.version>
+		<wrapped.version>3.7</wrapped.version>
 		<wrapped.artifactId>poi</wrapped.artifactId>
 		<bundle.symbolicName>org.apache.poi</bundle.symbolicName>
 		<wrapped.groupId>org.apache.poi</wrapped.groupId>
@@ -22,6 +22,11 @@
 		<dependency>
 			<groupId>${wrapped.groupId}</groupId>
 			<artifactId>poi-ooxml</artifactId>
+			<version>${wrapped.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
 			<version>${wrapped.version}</version>
 		</dependency>		
 	</dependencies>
