--- a/osgi/bundle/org.apache.poi/pom.xml
+++ b/osgi/bundle/org.apache.poi/pom.xml
@@ -7,7 +7,7 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>org.apache.poi</artifactId>
-	<version>3.7.1</version>
+	<version>3.7.2</version>
 	<packaging>bundle</packaging>
 	<name>${bundle.symbolicName}</name>
 
@@ -24,5 +24,15 @@
 			<artifactId>poi-ooxml</artifactId>
 			<version>${wrapped.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>${wrapped.groupId}</groupId>
+			<artifactId>poi-ooxml-schemas</artifactId>
+			<version>${wrapped.version}</version>
+		</dependency>	
+		<dependency>
+			<groupId>org.apache.xmlbeans</groupId>
+			<artifactId>xmlbeans</artifactId>
+			<version>2.3.0</version>
+		</dependency>	
 	</dependencies>
 </project>
