--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -171,7 +171,6 @@
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.datanucleus.store.types.jodatime.source</artifactId>
 			<version>3.0.1</version>
-
 		</dependency>
 
 		<!-- WEB -->
@@ -226,6 +225,27 @@
 			<version>3.0.9</version>
 		</dependency>
 		<dependency>
+			<groupId>org.datanucleus</groupId>
+			<artifactId>datanucleus-odf</artifactId>
+			<version>3.0.3</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.odftoolkit</groupId>
+					<artifactId>odfdom-java</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>	
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>org.datanucleus.store.odf.source</artifactId>
+			<version>3.0.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.elyast.orbit.osgi</groupId>
+			<artifactId>org.odftoolkit.odfdom</artifactId>
+			<version>0.8.15</version>
+		</dependency>							
+		<dependency>
 			<groupId>javax.jdo</groupId>
 			<artifactId>jdo-api</artifactId>
 			<version>3.1-SNAPSHOT-20110926</version>
@@ -234,23 +254,27 @@
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>javax.jdo.source</artifactId>
 			<version>3.1.0</version>
-
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.apache.poi</artifactId>
-			<version>3.7.1</version>
+			<version>3.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>org.apache.poi.source</artifactId>
-			<version>3.7.1</version>
+			<version>3.7.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.joda</groupId>
 			<artifactId>com.springsource.org.joda.time</artifactId>
 			<version>1.6.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.dom4j</groupId>
+			<artifactId>com.springsource.org.dom4j</artifactId>
+			<version>1.6.1</version>
+		</dependency>		
 		<dependency>
 			<groupId>org.elyast.orbit.osgi</groupId>
 			<artifactId>com.springsource.org.joda.time.source</artifactId>
